// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edit folder shapshot test 1`] = `
<div
  className="menu"
>
  <button
    className="menuButton"
    id="onlyBack"
    onClick={[Function]}
  >
    <img
      alt="back"
      className="icon"
      src="https://img.icons8.com/ios-filled/50/000000/back.png"
    />
  </button>
  <br />
  Name: 
  <input
    onChange={[Function]}
    type="text"
    value="example.com"
  />
  <br />
  <button
    className="plainButton"
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;

exports[`edit link shapshot test 1`] = `
<div
  className="menu"
>
  <button
    className="menuButton"
    id="onlyBack"
    onClick={[Function]}
  >
    <img
      alt="back"
      className="icon"
      src="https://img.icons8.com/ios-filled/50/000000/back.png"
    />
  </button>
  <br />
  Name: 
  <input
    onChange={[Function]}
    type="text"
    value="example.com"
  />
  <br />
  URL: 
  <input
    onChange={[Function]}
    type="text"
    value="http://example.com"
  />
  <br />
  <button
    className="plainButton"
    onClick={[Function]}
  >
    Submit
  </button>
</div>
`;
